--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tabler/icons-react": "^3.21.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
