--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy:
     DOCKER_TLS_CERTDIR: ""
   script:
     #- apk update && apk add --no-cache docker-compose git
-    - sudo apt-get update && sudo apt-get install -y docker-compose git
+    - apt-get update && sudo apt-get install -y docker-compose git
     - docker pull "$DOCKER_IMAGE"
     - mkdir -p /home/ubuntu/main-padash-client
     - cd /home/ubuntu/main-padash-client
