--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "env-cmd -f .env.local next dev",
+    "dev:prod": "env-cmd -f .env.prod next dev",
+    "build": "env-cmd -f .env.prod next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@tabler/icons-react": "^3.26.0",
     "axios": "^1.7.9",
+    "env-cmd": "^10.1.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
