--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
 # Deploy Stage
 deploy:
   stage: deploy
-  image: docker:20.10.16   # Alpine-based
+  image: docker:20.10.16
   services:
     - name: docker:20.10.16-dind
       command: ["--tls=false", "--host=tcp://0.0.0.0:2375"]
@@ -35,16 +35,26 @@ deploy:
     DOCKER_DRIVER: "overlay2"
     DOCKER_TLS_CERTDIR: ""
   script:
-    #- apk update && apk add --no-cache docker-compose git
     - sudo apt-get update && sudo apt-get install -y docker-compose git
     - sudo docker pull "$DOCKER_IMAGE"
     - mkdir -p /home/ubuntu/main-padash-client
+    - sudo chown -R $USER:$USER /home/ubuntu/main-padash-client
     - cd /home/ubuntu/main-padash-client
-    - sudo git clone "https://oauth2:${DEPLOY_TOKEN}@gitlab.com/mrtz73/padash-landing.git" . || git pull
-    - sudo docker-compose down
-    - sudo docker-compose up -d --build
+
+    # Mark the directory as safe for Git
+    - git config --global --add safe.directory /home/ubuntu/main-padash-client
+
+    # Clone if .git does not exist, else pull
+    - if [ ! -d .git ]; then
+        git clone "https://oauth2:${DEPLOY_TOKEN}@gitlab.com/mrtz73/padash-landing.git" .;
+      else
+        git pull;
+      fi
+
+    - docker-compose down
+    - docker-compose up -d --build
   only:
     - main
   tags:
     - vps-padash
-    - padash-landing  # Ensure these tags match your runner's tags.
+    - padash-landing
