--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ deploy:
   script:
     - sudo apt-get update && sudo apt-get install -y docker-compose git
     - sudo docker pull "$DOCKER_IMAGE"
+    - sudo rm -rf /home/ubuntu/main-padash-client
     - mkdir -p /home/ubuntu/main-padash-client
     - sudo chown -R $USER:$USER /home/ubuntu/main-padash-client
     - cd /home/ubuntu/main-padash-client
