Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 variables:
   # Define any global variables here.
-  DOCKER_IMAGE: m1994yazdani/main-padash-client:latest
+  DOCKER_IMAGE: $DOCKERHUB_USERNAME/main-padash-client:latest
 
 # Build Stage
 build:
