--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "next": "15.1.3",
     "react": "19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0",
     "styled-components": "^6.1.13"
   },
